Cleaned up files

--- a/background.html
+++ b/background.html
@@ -2,6 +2,11 @@
   <head>
     
     <script src="background.js"></script>
+
+    <audio id="my_audio" src="entry_gladiators" type="audio/mpeg">
+      <source src="entry_gladiators" type="audio/mpeg">
+    </audio>
+    
   </head>
   <body>
   </body>
